--- a/app.html
+++ b/app.html
@@ -195,14 +195,14 @@
         name: "Microsoft Project",
         icon: "project.png", // phải đúng tên file
         link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EtBthx3SX11IrpGZcvxxyPQBOeZpZe9F25HyKm6xadY6Lg?e=ZDqnfj",
-        desc: "Phần mềm dùng để lên kế hoạch, phục vụ, theo sát dự án (đã kèm key theo).",
+        desc: "Phần mềm dùng để lên kế hoạch, phục vụ, theo sát dự án (đã kèm key theo). Áp dụng cho người chỉ cần cài 1 phần mềm này hoặc máy đã có những phần mềm microsoft khác chỉ cài bổ sung thêm.",
         price: "Miễn phí"
       },
       {
-        name: "Unikey - Bàn phím tiếng Việt",
-        icon: "unikey.png",
-        link: "#",
-        desc: "Bộ gõ tiếng Việt tốt nhất cho Windows, miễn phí, gọn nhẹ.",
+        name: "Microsoft Visio",
+        icon: "visio.png",
+        link: "https://koha2002-my.sharepoint.com/personal/koha2002_koha2002_onmicrosoft_com/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkoha2002%5Fkoha2002%5Fonmicrosoft%5Fcom%2FDocuments%2F1%2E%20Share%2FAPP%2FVisio&ga=1",
+        desc: "Phần mềm dùng vẽ sơ đồ, mạch điện, dễ dùng do microsoft phát triển. Theo hướng kéo thả. Áp dụng cho người chỉ cần cài 1 phần mềm này hoặc máy đã có những phần mềm microsoft khác chỉ cài bổ sung thêm.",
         price: "Miễn phí"
       },
       {
