--- a/app.html
+++ b/app.html
@@ -206,10 +206,10 @@
         price: "Miễn phí"
       },
       {
-        name: "Facebook",
-        icon: "facebook.png",
-        link: "https://facebook.com",
-        desc: "Mạng xã hội lớn nhất thế giới, kết nối mọi người.",
+        name: "Word - Excel - PowerPoint",
+        icon: "office.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EqHcaiJwitFHkJckXng3DvoBHrGR66jRt-S7_dbSyeSOdw?e=C46VvO",
+        desc: "3 phần mềm cơ bản thường dùng và hữu dụng nhất của Microsoft.",
         price: "Miễn phí"
       },
       {
