--- a/app.html
+++ b/app.html
@@ -213,10 +213,10 @@
         price: "Miễn phí"
       },
       {
-        name: "Messenger",
-        icon: "messenger.png",
-        link: "https://messenger.com",
-        desc: "Ứng dụng chat miễn phí thuộc hệ sinh thái Facebook.",
+        name: "Bộ cài tổng Microsoft office",
+        icon: "vs_pj_of.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/En3sWvwJCmpDux2e3Ce8smIBxycNlx65_chrpI-PF-widQ?e=ZSmOjU",
+        desc: "Bộ cài đã bao gồm 5 ứng dụng: Word; Excel; PowerPoint; Visio; Project",
         price: "Miễn phí"
       },
       {
