--- a/app.html
+++ b/app.html
@@ -220,10 +220,10 @@
         price: "Miễn phí"
       },
       {
-        name: "ChatGPT",
-        icon: "chatgpt.png",
-        link: "https://chat.openai.com",
-        desc: "Trò chuyện với AI đa năng, hỗ trợ học tập, giải đáp mọi lĩnh vực.",
+        name: "Allavsoft",
+        icon: "allavsoft.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Erri4szqteVBjV-u2ztrXS8B9gwXUl2d0n-Wt00e_0IfMQ?e=4kSw0Y",
+        desc: "Phần mềm tải video YouTube, Facebook, Vimeo, Dailymotion, SoundCloud, và thậm chí là cả Spotify bằng đường link. Kèm thêm chức năng ghép video nhanh, convert định dạng video.",
         price: "Miễn phí"
       },
       // App SOON demo
