--- a/app.html
+++ b/app.html
@@ -226,13 +226,12 @@
         desc: "Phần mềm tải video YouTube, Facebook, Vimeo, Dailymotion, SoundCloud, và thậm chí là cả Spotify bằng đường link. Kèm thêm chức năng ghép video nhanh, convert định dạng video. (Kích hoạt bản quyền)",
         price: "$59.99"
       },
-      // App SOON demo
       {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Tính năng đang phát triển, sẽ cập nhật sớm.",
-        price: "Soon"
+        name: "Everything",
+        icon: "everything.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EuXnMMdW1CpDlG78sqVH5LkBRFbUOuxCZr6-jebOHdFXHQ?e=Mxc797",
+        desc: "Phần mềm hỗ trợ tìm kiếm file nhanh trong máy tính của bạn. Áp dụng tiện nhất với những người có số lượng lớn file mà hay quên vị trí lưu.",
+        price: "Miễn Phí"
       },
       {
         name: "Lively Wallpaper",
