--- a/app.html
+++ b/app.html
@@ -234,38 +234,38 @@
         price: "Miễn Phí"
       },
       {
-        name: "Lively Wallpaper",
+        name: "Soon",
         icon: "app.png",
         link: "#",
-        desc: "Tùy biến hình nền động cho máy tính Windows.",
+        desc: "Soon.",
         price: "Soon"
       },
       {
-        name: "Seelen UI",
+        name: "Soon",
         icon: "app.png",
         link: "#",
-        desc: "Chỉnh cửa sổ, chia màn hình tiện lợi cho Windows.",
+        desc: "Soon.",
         price: "Soon"
       },
       {
-        name: "Spotify",
+        name: "Soon",
         icon: "app.png",
         link: "#",
-        desc: "Nghe nhạc trực tuyến, podcast, thư viện khổng lồ.",
+        desc: "Soon",
         price: "Soon"
       },
       {
-        name: "TranslucentTB",
+        name: "Soon",
         icon: "app.png",
         link: "#",
-        desc: "Làm thanh Taskbar trong suốt, đẹp cho Windows.",
+        desc: "Soon",
         price: "Soon"
       },
       {
-        name: "iCloud",
+        name: "Soon",
         icon: "app.png",
         link: "#",
-        desc: "Lưu trữ dữ liệu và đồng bộ đa thiết bị Apple.",
+        desc: "Soon",
         price: "Soon"
       }
     ];
