--- a/app.html
+++ b/app.html
@@ -234,11 +234,11 @@
         price: "Miễn Phí"
       },
       {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon.",
-        price: "Soon"
+        name: "Traffic Monitor",
+        icon: "traffic.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Ely7Xsur1BVKlyEPdwvl72IBasZpGE4OugnYHOmGLIdMMw?e=gyTTNT",
+        desc: "Phần mềm hỗ trợ bạn kiểm tra tốc độ dowload/upload của mạng. Có thêm chức năng xem nhanh dung lượng ram, cpu ở góc dưới bên phải cài đặt.",
+        price: "Miễn Phí"
       },
       {
         name: "Soon",
