--- a/app.html
+++ b/app.html
@@ -241,11 +241,11 @@
         price: "Miễn Phí"
       },
       {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon.",
-        price: "Soon"
+        name: "EVkey",
+        icon: "evkey.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Ehw6BTWKa8FKnuQahLLOTWgBaLqKiy0Rr-i9el8pwgT2Bw?e=8IqEse",
+        desc: "Bộ gõ tiếng Việt",
+        price: "Miễn Phí"
       },
       {
         name: "Soon",
