--- a/app.html
+++ b/app.html
@@ -248,11 +248,11 @@
         price: "Miễn Phí"
       },
       {
-        name: "Soon",
-        icon: "app.png",
-        link: "#",
-        desc: "Soon",
-        price: "Soon"
+        name: "Faststone Capture",
+        icon: "fsc.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/ElT4874yNStCuXJiZ004MxcBTgvF6E7o4p-7My0UCkDILg?e=G074QZ",
+        desc: "Phần mềm hỗ trợ chụp ảnh màn hình, sửa ảnh, quay video màn hình. ALL in One",
+        price: "$19.95"
       },
       {
         name: "Soon",
