--- a/app.html
+++ b/app.html
@@ -255,13 +255,48 @@
         price: "$19.95"
       },
       {
+        name: "Winrar",
+        icon: "rar.png",
+        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EjMT3ipfXX5Nujbf8XAKoS0BQxl9uunfCvvTlMrVkdAuhg?e=VvfWiU",
+        desc: "Phần mềm hỗ trợ giải và nén file phổ biến nhất hiện nay",
+        price: "Miễn Phí"
+      },
+      {
         name: "Soon",
         icon: "app.png",
         link: "#",
         desc: "Soon",
         price: "Soon"
-      },
+      }
       {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      }
+      {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      }
+          {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      }
+          {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      }
+          {
         name: "Soon",
         icon: "app.png",
         link: "#",
