--- a/app.html
+++ b/app.html
@@ -268,6 +268,27 @@
         desc: "Soon",
         price: "Soon"
       }
+      {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+      {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+      {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      }
     ];
     // ===== RENDER APP =====
     function renderApps() {
