--- a/app.html
+++ b/app.html
@@ -282,6 +282,69 @@
         desc: "Soon",
         price: "Soon"
       },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
+            {
+        name: "Soon",
+        icon: "app.png",
+        link: "#",
+        desc: "Soon",
+        price: "Soon"
+      },
       {
         name: "Soon",
         icon: "app.png",
