--- a/app.html
+++ b/app.html
@@ -10,12 +10,14 @@
       margin:0;
       padding:0;
     }
-    body {
-      min-height: 100vh;
-      font-family: Arial, Helvetica, sans-serif;
-      background: radial-gradient(circle at 50% 0%, #d1f3ff 0%, #90d0fa 45%, #f7fbff 100%);
-      display: flex; flex-direction: column;
-    }
+body {
+  min-height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  background: radial-gradient(circle at 50% 0%, #d1f3ff 0%, #90d0fa 45%, #f7fbff 100%);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  display: flex; flex-direction: column;
+}
     .mini-header {
       display: flex; align-items: center;
       background: #eaf7ffed; box-shadow: 0 2px 16px #70bbfa22;
