--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
         <div class="feature-title">Các phần mềm cần thiết</div>
         <div class="feature-desc">Các phần mềm và ứng dụng hỗ trợ cho máy tính của bạn</div>
       </a>
-      <a class="feature" href="trick.html">
-        <img class="feature-img" src="https://cdn-icons-png.flaticon.com/512/2919/2919600.png" alt="Viết lại nội dung">
-        <div class="feature-title">Các mẹo cho máy tính</div>
-        <div class="feature-desc">Các cách, phần mềm tối ưu cho máy tính của bạn.</div>
+      <a class="feature" href="test.html">
+        <img class="feature-img" src="https://cdn-icons-png.flaticon.com/512/2919/2919600.png" alt="Test">
+        <div class="feature-title">Test code</div>
+        <div class="feature-desc">Soon.</div>
       </a>
       <a class="feature" href="tu-moi.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
