--- a/test.html
+++ b/test.html
@@ -2,208 +2,192 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>AI build by KoHa - Vision Chat</title>
+  <title>AI build by KoHa</title>
+  <meta name="color-scheme" content="dark light">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
   <style>
-    body {
-      background: #0d1017;
-      font-family: 'Roboto', 'Segoe UI', Arial, sans-serif;
-      min-height: 100vh;
+    html, body {
+      height: 100%;
+      width: 100%;
       margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .chat-container {
-      width: 700px;
-      max-width: 98vw;
-      min-height: 830px;
-      background: #181c23;
-      border-radius: 32px;
-      box-shadow: 0 0 42px #000a;
-      display: flex;
-      flex-direction: column;
+      padding: 0;
+      font-family: 'Roboto', 'Segoe UI', Arial, sans-serif;
+      color-scheme: dark light;
+      background-color: Canvas;
+      color: CanvasText;
       overflow: hidden;
     }
+    body {
+      width: 100vw;
+      height: 100vh;
+    }
+    .chat-container {
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      background: transparent;
+      border-radius: 0;
+      box-shadow: none;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+    }
     .chat-header {
-      background: #23283d;
-      color: #aee3fe;
-      font-size: 29px;
+      background: inherit;
+      color: inherit;
+      font-size: 27px;
       font-weight: 700;
       text-align: left;
-      padding: 30px 38px 22px 38px;
-      letter-spacing: 2px;
-      border-bottom: 1.5px solid #22293d;
+      padding: 22px 2vw 14px 2vw;
+      letter-spacing: 1.2px;
+      border-bottom: 1px solid ButtonBorder;
+      flex: 0 0 auto;
+      z-index: 1;
+      width: 100%;
     }
     .chat-body {
-      flex: 1;
-      background: #181c23;
-      padding: 45px 38px 28px 38px;
+      flex: 1 1 auto;
+      background: transparent;
+      padding: 18px 0 18px 0;
       overflow-y: auto;
       display: flex;
       flex-direction: column;
-      gap: 32px;
+      gap: 16px;
+      scroll-behavior: smooth;
+      width: 100vw;
     }
     .message {
       display: flex;
       flex-direction: column;
-      max-width: 88%;
-      border-radius: 28px;
-      padding: 22px 28px;
-      margin-bottom: 7px;
-      font-size: 20px;
-      line-height: 1.68;
+      width: 100vw;
+      max-width: 100vw;
+      border-radius: 0;
+      padding: 16px 0;
+      font-size: 18px;
+      line-height: 1.7;
       word-break: break-word;
-      box-shadow: 0 3px 14px #0002;
       position: relative;
       font-family: 'Roboto', Arial, sans-serif;
       font-weight: 400;
+      background: transparent;
+      color: inherit;
     }
     .message.user {
-      align-self: flex-end;
-      background: #3b51ff;
+      background: color-mix(in srgb, AccentColor 85%, transparent 15%);
       color: #fff;
-      border-bottom-right-radius: 13px;
+      text-align: right;
+      border-bottom: 1px solid ButtonBorder;
+      border-top: 1px solid ButtonBorder;
+      padding-right: 3vw;
+      padding-left: 25vw;
     }
     .message.ai {
-      align-self: flex-start;
-      background: #202746;
-      color: #aee3fe;
-      border-bottom-left-radius: 13px;
+      background: color-mix(in srgb, ButtonFace 92%, transparent 8%);
+      color: AccentColorText;
+      text-align: left;
+      border-bottom: 1px solid ButtonBorder;
+      border-top: 1px solid ButtonBorder;
+      padding-left: 3vw;
+      padding-right: 25vw;
     }
     .ai-label {
-      font-size: 15px;
+      font-size: 14px;
       font-weight: 600;
-      margin-bottom: 8px;
-      color: #6c9cff;
+      margin-bottom: 7px;
+      color: Highlight;
       letter-spacing: 1px;
     }
     .message .img-msg {
-      margin-top: 14px;
-      max-width: 350px;
-      border-radius: 17px;
-      border: 2px solid #222;
-      box-shadow: 0 3px 16px #0006;
+      margin-top: 10px;
+      max-width: 320px;
+      border-radius: 10px;
+      border: 1.5px solid ButtonBorder;
+      box-shadow: 0 2px 10px #0003;
       display: block;
-    }
-    .message .caption {
-      color: #bbdafe;
-      margin-top: 12px;
-      font-size: 17px;
+      background: ButtonFace;
     }
     .chat-footer {
-      background: #23283d;
+      background: inherit;
+      border-top: 1px solid ButtonBorder;
+      flex: 0 0 auto;
+      z-index: 2;
+      width: 100vw;
+      padding: 18px 2vw;
       display: flex;
       align-items: center;
-      padding: 20px 38px;
-      gap: 17px;
-      border-top: 1.5px solid #22293d;
-    }
-    .icon-btn, .upload-label {
-      background: #3b51ff;
-      color: #fff;
-      border: none;
-      border-radius: 12px;
-      padding: 14px 22px;
-      font-size: 27px;
-      cursor: pointer;
-      margin-right: 7px;
-      transition: background 0.18s;
-      display: flex;
-      align-items: center;
-      font-weight: 500;
-    }
-    .icon-btn:hover, .upload-label:hover {
-      background: #2036a8;
-    }
-    .upload-label {
-      padding: 13px 21px;
-      font-size: 26px;
-    }
-    .chat-footer input[type="file"] {
-      display: none;
+      gap: 0;
+      box-sizing: border-box;
     }
     .chat-footer input[type="text"] {
-      flex: 1;
-      padding: 17px 24px;
-      border-radius: 12px;
+      width: 100%;
+      padding: 15px 18px;
+      border-radius: 9px;
       border: none;
       outline: none;
-      background: #181c23;
-      color: #fff;
-      font-size: 20px;
+      background: ButtonFace;
+      color: ButtonText;
+      font-size: 18px;
       font-family: 'Roboto', Arial, sans-serif;
       font-weight: 400;
+      box-shadow: 0 1px 4px #0001 inset;
+      margin: 0;
     }
     ::placeholder {
-      color: #a6b7d4;
+      color: GrayText;
       opacity: 1;
-      font-size: 20px;
+      font-size: 18px;
     }
-    @media (max-width: 900px) {
-      .chat-container { width: 99vw; min-height: 99vh;}
-      .chat-header, .chat-body, .chat-footer { padding-left: 8vw; padding-right: 8vw;}
+    @media (max-width: 650px) {
+      .chat-header, .chat-footer { font-size: 18px; padding-left: 3vw; padding-right: 3vw;}
+      .message.user, .message.ai { padding-left: 8vw; padding-right: 8vw;}
+      .chat-footer input[type="text"] { font-size: 16px;}
     }
-    ::-webkit-scrollbar { width: 10px;}
-    ::-webkit-scrollbar-thumb { background: #23283d; border-radius: 5px;}
+    ::-webkit-scrollbar { width: 8px;}
+    ::-webkit-scrollbar-thumb { background: ButtonBorder; border-radius: 5px;}
+    @media (max-width: 500px) {
+      .chat-header, .chat-footer { font-size: 15px;}
+      .chat-footer input[type="text"] { font-size: 14px;}
+    }
   </style>
 </head>
 <body>
   <div class="chat-container">
-    <div class="chat-header">AI build by KoHa</div>
+    <div class="chat-header">AI do KoHa phát triển</div>
     <div class="chat-body" id="chatBody">
-      <div style="text-align:center; margin-top:38px; color:#7897da; font-size:25px; font-family:'Roboto',Arial,sans-serif;">
-        <img src="https://i.ibb.co/nLw2dtM/nebulablock-logo.png" width="100" style="margin-bottom:21px; opacity:0.92;" alt="logo nebula">
-        <div style="font-weight:500;">What's on your mind?</div>
+      <div style="text-align:center; margin-top:24px; color:Highlight; font-size:22px; font-family:'Roboto',Arial,sans-serif;">
+        <div style="margin-bottom:11px; opacity:0.92; font-size:14px;">AI do KoHa phát triển</div>
+        <div style="font-weight:500;">Bạn muốn hỏi gì?</div>
       </div>
     </div>
-    <div class="chat-footer">
-      <label for="fileInput" class="upload-label" title="Gửi ảnh"><span>+</span></label>
-      <input type="file" id="fileInput" accept="image/*" />
-      <input type="text" id="userInput" placeholder="Nhập tin nhắn hoặc yêu cầu dịch ảnh..." autocomplete="off" />
-      <button class="icon-btn" onclick="sendMessage()" title="Gửi tin nhắn">&#9658;</button>
-    </div>
+    <form class="chat-footer" onsubmit="sendMessage();return false;">
+      <input type="text" id="userInput" placeholder="Nhập nội dung, ấn Enter để gửi..." autocomplete="off" />
+    </form>
   </div>
   <script>
+    // Đổi API key của bạn tại đây
     const apiKey = "sk-StT0_IrHaLUzYqrMOxPlxg";
     const chatBody = document.getElementById('chatBody');
     const userInput = document.getElementById('userInput');
-    const fileInput = document.getElementById('fileInput');
-    let uploadedImage = null;
+    const STORAGE_KEY = 'koha_ai_chat_history_v1';
+    let uploadedImage = null; // Nếu cần sau này
 
-    // Xử lý và làm sạch text trả về (bỏ **, --- và giữ xuống dòng)
+    // Xử lý text sạch đẹp
     function cleanText(text) {
       if (!text) return "";
-      // Bỏ **, __, ---, ---..., * ... * (bold, italic, gạch ngang Markdown)
       text = text.replace(/(\*\*|__)/g, '');
       text = text.replace(/---+/g, '');
-      // Nếu có các ký hiệu khác muốn bỏ tiếp tục thêm ở đây
-      // Giữ xuống dòng, chuyển \n thành <br>
       text = text.replace(/\n/g, '<br>');
-      // Bỏ dòng trắng đầu/cuối
       text = text.replace(/^(<br>)+/, '').replace(/(<br>)+$/, '');
       return text.trim();
     }
 
-    // Hiển thị ảnh preview trước khi gửi
-    fileInput.onchange = function () {
-      const file = this.files[0];
-      if (!file) return;
-      const reader = new FileReader();
-      reader.onload = function (e) {
-        uploadedImage = e.target.result;
-        appendMessage('user', '[Đã tải ảnh lên. Gửi để AI xử lý hoặc thêm prompt!]', uploadedImage);
-      };
-      reader.readAsDataURL(file);
-      this.value = "";
-    };
-
-    // Tạo message (user hoặc AI)
-    function appendMessage(role, text, imgSrc = null, caption = "") {
+    // Thêm tin nhắn vào DOM
+    function appendMessage(role, text, imgSrc = null) {
       const msgDiv = document.createElement('div');
       msgDiv.className = 'message ' + role;
       if (role === 'ai') {
-        msgDiv.innerHTML = `<div class="ai-label">AI build by KoHa</div>` +
+        msgDiv.innerHTML = `<div class="ai-label">AI do KoHa phát triển</div>` +
           (text ? `<div>${text}</div>` : '');
       } else {
         msgDiv.innerHTML = text ? text : '';
@@ -213,38 +197,58 @@
         img.src = imgSrc;
         img.className = 'img-msg';
         msgDiv.appendChild(img);
-        if (caption) {
-          const cap = document.createElement('div');
-          cap.className = 'caption';
-          cap.textContent = caption;
-          msgDiv.appendChild(cap);
-        }
       }
       chatBody.appendChild(msgDiv);
       chatBody.scrollTop = chatBody.scrollHeight;
     }
 
+    // Lưu lịch sử vào localStorage
+    function saveHistory() {
+      const messages = Array.from(chatBody.querySelectorAll('.message')).map(m => {
+        const role = m.classList.contains('ai') ? 'ai' : 'user';
+        const textDiv = m.querySelector(role === 'ai' ? 'div:not(.ai-label)' : 'div');
+        const text = textDiv ? textDiv.innerHTML : m.innerHTML;
+        const img = m.querySelector('img');
+        return { role, text, imgSrc: img ? img.src : null };
+      });
+      localStorage.setItem(STORAGE_KEY, JSON.stringify(messages));
+    }
+
+    // Load lịch sử từ localStorage
+    function loadHistory() {
+      const messages = JSON.parse(localStorage.getItem(STORAGE_KEY) || "[]");
+      if (messages.length) {
+        chatBody.innerHTML = ""; // Xóa intro mặc định
+        messages.forEach(msg => {
+          appendMessage(msg.role, msg.text, msg.imgSrc);
+        });
+      }
+    }
+
+    // Gửi tin nhắn
     async function sendMessage() {
       const text = userInput.value.trim();
       if (!text && !uploadedImage) return;
       appendMessage('user', text, uploadedImage);
 
-      // Xoá "What's on your mind?" nếu còn
+      // Xoá intro nếu còn
       if (chatBody.firstElementChild && chatBody.children.length > 1 &&
-          chatBody.firstElementChild.innerText.includes("What's on your mind?")) {
+          chatBody.firstElementChild.innerText.includes("Bạn muốn hỏi gì")) {
         chatBody.removeChild(chatBody.firstElementChild);
       }
 
       appendMessage('ai', '<i>Đang xử lý...</i>');
       userInput.value = '';
+      chatBody.scrollTop = chatBody.scrollHeight;
+      saveHistory();
 
-      // Chuẩn hóa messages
       let contentArr = [];
       if (text) contentArr.push({ type: "text", text: text });
       if (uploadedImage) contentArr.push({ type: "image_url", image_url: { url: uploadedImage } });
 
       if (!contentArr.length) {
         chatBody.removeChild(chatBody.lastChild);
+        saveHistory();
         return;
       }
 
@@ -284,13 +288,19 @@
         appendMessage('ai', 'Lỗi: ' + e.message);
       }
       uploadedImage = null;
+      saveHistory();
     }
 
-    // Enter gửi tin nhắn
+    // Gửi bằng Enter
     userInput.addEventListener('keydown', function(e) {
       if (e.key === 'Enter') sendMessage();
     });
-    document.querySelector('label[for="fileInput"]').onclick = () => fileInput.click();
+
+    // Tải lịch sử khi load lại trang
+    loadHistory();
+
+    // Tự động lưu khi đóng tab/trình duyệt
+    window.addEventListener('beforeunload', saveHistory);
   </script>
 </body>
 </html>
